completed basic layout in html

--- a/index.html
+++ b/index.html
@@ -68,10 +68,48 @@
             </div>
         </div>
         <div class="announcements">
-
+            <div>
+                <h4>Site Maintainence</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div>
+                <h4>Site Maintainence</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div>
+                <h4>Site Maintainence</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
         </div>
-        <div class="Trending">
-
+        <div class="trending">
+            <div>
+                <p>pic</p>
+                <div>
+                    <p>@tegan</p>
+                    <p>World Peace Builder</p>
+                </div>
+            </div>
+            <div>
+                <p>pic</p>
+                <div>
+                    <p>@tegan</p>
+                    <p>World Peace Builder</p>
+                </div>
+            </div>
+            <div>
+                <p>pic</p>
+                <div>
+                    <p>@tegan</p>
+                    <p>World Peace Builder</p>
+                </div>
+            </div>
+            <div>
+                <p>pic</p>
+                <div>
+                    <p>@tegan</p>
+                    <p>World Peace Builder</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
