--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p>Search</p>
+        <img src="search-web.svg">
         <input type="text" id="search" name="search">
         <p>Notifications</p>
         <p>Profile</p>
@@ -25,7 +25,7 @@
         <button>Share</button>
     </div>
     <div class="sidebar">
-        <h3>Dashboard</h3>
+        <h1>Dashboard</h1>
         <ul class="first">
             <li>Home</li>
             <li>Profile</li>
